# friendly-id-js

./: Cargo.toml  Makefile  README.md  package.template.json
src/: lib.rs
