[package]
name = "friendly_id_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
friendly_id = { git = "https://github.com/naoki-tomita/friendly_id.git", rev = "5930ce7" }

wasm-bindgen = "0.2"
